# manj-mcp

./: .gitignore  Dockerfile  pyproject.toml
src/manj_mcp/: __init__.py  __main__.py  app.py
wheels/: manj_ast_py-0.1.0-cp312-abi3-manylinux_2_34_aarch64.whl  manj_ast_py-0.1.0-cp312-abi3-manylinux_2_34_x86_64.whl
