[project]
name = "manj-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sakakibara yuuki", email = "sakakilabo0000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
manj-mcp = "manj_mcp:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
