[project]
name = "manj-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sakakibara yuuki", email = "sakakilabo0000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.21.2",
    "meilisearch>=0.38.0",
    "manj-ast-py",
    "google-cloud-storage>=2.18.2",
]

[project.scripts]
server = "manj_mcp:__main__"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.uv.sources]
manj-ast-py = { path = "wheels/manj_ast_py-0.1.0-cp312-abi3-manylinux_2_34_x86_64.whl" }
